--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "example_libfloresta"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,7 +16,9 @@ serde_json = "1.0.105"
 hex = "0.4.3"
 js-sys = "0.3.64"
 serde = "1.0.183"
-
+anyhow = "1.0.75"
+gloo-net = "0.4.0"
+getrandom = { version = "0.2", features = ["js"] }
 [lib]
 crate-type = ["cdylib", "rlib"]
 [patch."https://github.com/rust-lang/crates.io-index"]
